--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "socket.io-client": "^3.1.0"
   },
   "devDependencies": {
