--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^3.1.0"
   },
   "devDependencies": {
